fix about me spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -418,6 +418,12 @@ a {
 	}
 }
 
+@media (min-width: 1400px) {
+	.about-container-2-text {
+		width: 55vw;
+	}
+}
+
 .about-more-info {
 	width: 80vw;
 }
